--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<h3>Testing so hard </h3>
+<div class="container">
+ <div class="row">
+   <div class="col-xs-12">
+
+    <h3>Testing so hard </h3>
+    <hr>
+    <app-servers></app-servers>
+
+   </div>
+ </div>
+</div>
+
