warning and success components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
     <h3>Testing so hard </h3>
     <hr>
     <app-servers></app-servers>
+    <app-warning-alert></app-warning-alert>
+    <app-success-alert></app-success-alert>
 
    </div>
  </div>
